Xfce v4.18: Fix invisible items in thunar sidebar

--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -6177,10 +6177,6 @@ ConversationListView {
 .thunar toolbar.horizontal button image {
   -gtk-icon-transform: scale(0.72); }
 
-scrolledwindow.sidebar treeview.view {
-  background: #1c2529;
-  padding: 1.5px; }
-
 /* path-bar of thunar */
 window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-bar .path-bar-button,
 .thunar toolbar .path-bar-button {
@@ -6225,10 +6221,12 @@ window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-
   border-bottom: 1px solid #00A9A5; }
 
 /* thunar sidepane */
-window.thunar paned > scrolledwindow treeview.view {
+scrolledwindow.sidebar treeview.view {
+  background: #1c2529;
+  padding: 1.5px;
   border-radius: 0;
   box-shadow: none; }
-  window.thunar paned > scrolledwindow treeview.view:hover, window.thunar paned > scrolledwindow treeview.view:selected {
+  scrolledwindow.sidebar treeview.view:hover, scrolledwindow.sidebar treeview.view:selected {
     background: #2a393e;
     color: white; }
 
